SVN/Unreleased
==============

  - Add dependency between projects. The build of one project can
    trigger the build of one other. [thefunny]

  - Improve the virtual env creation for Windows (mingw) and Cygwin.
    Installation of eggs works with mingw, and we should get a python
    ../../bin/python for Cygwin as well (symlink to the python used to
    run buildout). [thefunny]

0.3.1 (2008-05-31)
==================

  - Fixed poller documentation and examples [mustapha]

  - Fixed failed tests when your executable is called something other
    than python, e.g python2.4 [mustapha]

0.3.0 (2008-05-28)
==================

  - Use a custom scheduler to get poller working again [gawel]

  - Add splitter option to the poller recipe [gawel]

  - Added support for running PyFlakes on projects [dokai] 

  - Refactored project name extraction logic [dokai]
    
    - Added Git support

    - Added support for defining multiple projects that result in
      duplicate project names (e.g. projects referring to different
      branches in a Subversion repository.)

  - Try to retrieve project name from svn urls [gawel]

  - Use a random minute in cron-scheduler when we have more than one
    repository [gawel]

  - Deactive virtualenv under cygwin, this doesn't work [thefunny]

  - 'environment' can be used to specify environment variable on
    slaves [thefunny]

  - 'eggs' can be used to install extra eggs in slaves [thefunny]

  - Refactored the functionality of the 'projects' recipe into the
    'project' recipe and removed the 'projects' entry point. [dokai]

  - Refactored the functionality of the 'pollers' recipe into the
    'poller' recipe and removed the 'pollers' entry point. [dokai]

  - Poller config files are now named after the section name, allowing
    multiple poller sections to be defined. [dokai]

0.2.1 (2008-05-21)
==================

  - Fixed a critical typo in the slave name configuration in
    fullexample.txt [dokai]

0.2.0 (2008-05-21)